hw5-api-gateway/k8s/deployment_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: otus-hw5-api-gateway-app
  name: otus-hw5-api-gateway-app-deployment
spec:
    replicas: 3
    selector:
       matchLabels:
          app: otus-hw5-api-gateway-app
    template:
       metadata:
          labels:
             app: otus-hw5-api-gateway-app
       spec:
          containers:
          - name: otus-hw5-api-gateway-app
            image: evgen2sat/otus-hw5-api-gateway-app:1.0.0
            ports:
              - name: web 
                containerPort: 8000
            livenessProbe:
              httpGet:
                port: 8000
                path: /health
              initialDelaySeconds: 10
              periodSeconds: 5
              timeoutSeconds: 2
            readinessProbe:
              httpGet:
                port: 8000
                path: /health
              initialDelaySeconds: 10
              periodSeconds: 5
