hw5-api-gateway/k8s/deployment_auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: otus-hw5-api-gateway-auth
  name: otus-hw5-api-gateway-auth-deployment
spec:
    replicas: 1
    selector:
       matchLabels:
          app: otus-hw5-api-gateway-app
    template:
       metadata:
          labels:
             app: otus-hw5-api-gateway-app
       spec:
          containers:
          - name: otus-hw5-api-gateway-auth
            image: evgen2sat/otus-hw5-api-gateway-auth:1.0.0
            ports:
              - name: web-auth 
                containerPort: 8001
