hw5-api-gateway/k8s/service_app.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: otus-hw5-api-gateway-app
  name: otus-hw5-api-gateway-app-service
spec:
  selector:
    app: otus-hw5-api-gateway-app
  ports:
    - protocol: TCP
      port: 9000
      targetPort: web 
      name: web
  type: NodePort
