hw5-api-gateway/k8s/service_auth.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: otus-hw5-api-gateway-app
  name: otus-hw5-api-gateway-auth-service
spec:
  selector:
    app: otus-hw5-api-gateway-app
  ports:
    - protocol: TCP
      port: 9001
      targetPort: web 
      name: web
  type: NodePort
