hw5-api-gateway/k8s/ingress_app.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: otus-hw5-api-gateway-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/auth-url: "http://otus-hw5-api-gateway-auth-service.default.svc.cluster.local:9001/auth"
    nginx.ingress.kubernetes.io/auth-response-headers: "X-UserId"    
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /otusapp(/|$)(.*)
        backend:
          serviceName: otus-hw5-api-gateway-app-service
          servicePort: 9000
